fix: Adjust styling when title is truncated

--- a/src/course-outline/card-header/CardHeader.scss
+++ b/src/course-outline/card-header/CardHeader.scss
@@ -10,6 +10,7 @@
     margin-right: .25rem;
     background: transparent;
     color: var(--pgn-color-black);
+    white-space: nowrap;
   }
 
   .item-card-edit-icon {
